--- a/package.json
+++ b/package.json
@@ -22,10 +22,14 @@
     "lucide-react": "^0.548.0",
     "next": "16.0.0",
     "next-themes": "^0.4.6",
+    "prettier": "^3.6.2",
     "react": "19.2.0",
     "react-dom": "19.2.0",
+    "react-markdown": "^10.1.0",
     "remark-gfm": "^4.0.1",
-    "tailwind-merge": "^3.3.1"
+    "tailwind-merge": "^3.3.1",
+    "unified": "^11.0.5",
+    "unified-consistency": "^2.0.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
